deployments/home-assistant/mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-mqtts
  namespace: homeassistant
spec:
  type: NodePort
  selector:
    app: mosquitto
  ports:
  - port: 1883
    nodePort: 30883
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-ws
  namespace: homeassistant
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
  - port: 9001
