deployments/home-assistant/mosquitto/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: mosquitto-ingress
  namespace: homeassistant
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    # - match: Host(`www.mqtt.local.tigovanroy.space`)
    #   kind: Rule
    #   services:
    #     - name: mosquitto-mqtts
    #       port: 8080
    - match: Host(`mqtt.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: mosquitto-mqtts
          port: 1883
      middlewares:
        - name: homeassistant-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
